# interactive-feedback-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml
frontend-dev/: index.html  package-lock.json  package.json  vite.config.js
frontend-dev/src/: App.vue  main.js
frontend-dev/src/assets/styles/: components.scss  main.scss  variables.scss
frontend-dev/src/components/: AIWorkSummary.vue  FeedbackForm.vue  HumanResponsePanel.vue  ImageUpload.vue  SessionStatus.vue  WebSocketClient.vue
frontend-dev/src/composables/: useFileUpload.js  useWebSocket.js
frontend-dev/src/stores/: aiWork.js  feedback.js  session.js
issues/: MCP_Feedback_Enhanced_開發計劃書.md  重構計劃優化版.md  階段0實施記錄.md  階段1實施記錄.md  階段2實施記錄.md  階段3實施記錄.md
scripts/: build_frontend.py
src/mcp_feedback_enhanced/: __init__.py  __main__.py  cli.py  server.py  test_web_ui.py
src/mcp_feedback_enhanced/backend/: __init__.py  config.py  file_handler.py  main.py  mcp_server.py  models.py  session.py  static.py  websocket.py
src/mcp_feedback_enhanced/frontend/: __init__.py  build_info.json
src/mcp_feedback_enhanced/gui/locales/en/: translations.json
src/mcp_feedback_enhanced/gui/locales/zh-CN/: translations.json
src/mcp_feedback_enhanced/gui/locales/zh-TW/: translations.json
src/mcp_feedback_enhanced/gui/tabs/: summary_tab.py
src/mcp_feedback_enhanced/gui/widgets/: image_preview.py
src/mcp_feedback_enhanced/utils/: build_utils.py
src/mcp_feedback_enhanced/web/: main.py
src/mcp_feedback_enhanced/web/core/: __init__.py  architecture_manager.py  config_manager.py  connection_pool.py  event_handlers.py  events.py  port_manager.py  security_manager.py  state_manager.py  websocket_handler.py  webui_adapter.py
src/mcp_feedback_enhanced/web/locales/en/: translation.json
src/mcp_feedback_enhanced/web/locales/zh-CN/: translation.json
src/mcp_feedback_enhanced/web/locales/zh-TW/: translation.json
src/mcp_feedback_enhanced/web/routes/: __init__.py  event_driven_routes.py  main_routes.py
src/mcp_feedback_enhanced/web/static/css/: styles.css
src/mcp_feedback_enhanced/web/static/js/: api-client.js  app.js
src/mcp_feedback_enhanced/web/templates/: feedback.html  index.html
src/mcp_feedback_enhanced/web/templates/components/: image-upload.html  status-indicator.html
